--- a/src/usr/lib/systemd/system/turtlefirewall.service
+++ b/src/usr/lib/systemd/system/turtlefirewall.service
@@ -6,6 +6,9 @@ Requires=network.target
 [Service]
 ExecStart=/usr/sbin/turtlefirewall --start
 ExecStartPost=/usr/lib/turtlefirewall/ip_blacklist -x
+ExecStartPost=/usr/lib/turtlefirewall/domain_blacklist -x
+ExecStartPost=/usr/lib/turtlefirewall/ja3_blacklist -x
+ExecStartPost=/usr/lib/turtlefirewall/sha1_blacklist -x
 ExecStop=/usr/sbin/turtlefirewall --stop
 ExecStopPost=/bin/rm -f /etc/turtlefirewall/iptables.dat
 Type=oneshot
