Bug : Remove Domain Blacklist wildcard match.

--- a/src/usr/share/doc/turtlefirewall/fw.xml.sample
+++ b/src/usr/share/doc/turtlefirewall/fw.xml.sample
@@ -15,7 +15,7 @@
 <option name="drop_invalid_fragment" value="on"/>
 <option value="262144" name="nf_conntrack_max"/>
 <option name="drop_invalid_all" value="off"/>
-<option name="drop_ja3_blacklist" value="on"/>
+<option name="drop_ja3_blacklist" value="off"/>
 <option value="on" name="drop_invalid_syn_fin"/>
 </options>
 
