--- a/dkms/dkms-xtables-addons.conf
+++ b/dkms/dkms-xtables-addons.conf
@@ -13,90 +13,98 @@ AUTOINSTALL="yes"
 # Automatically generated rules below
 ####
 
-BUILT_MODULE_LOCATION[0]="" 		
-BUILT_MODULE_NAME[0]="xt_ACCOUNT" 		
+BUILT_MODULE_LOCATION[0]=""
+BUILT_MODULE_NAME[0]="xt_ACCOUNT"
 DEST_MODULE_LOCATION[0]="/extra"
 
-BUILT_MODULE_LOCATION[1]="" 		
-BUILT_MODULE_NAME[1]="xt_pknock" 		
+BUILT_MODULE_LOCATION[1]=""
+BUILT_MODULE_NAME[1]="xt_CHAOS"
 DEST_MODULE_LOCATION[1]="/extra"
 
-BUILT_MODULE_LOCATION[2]="" 		
-BUILT_MODULE_NAME[2]="xt_CHAOS" 		
+BUILT_MODULE_LOCATION[2]=""
+BUILT_MODULE_NAME[2]="xt_DELUDE"
 DEST_MODULE_LOCATION[2]="/extra"
 
-BUILT_MODULE_LOCATION[3]="" 		
-BUILT_MODULE_NAME[3]="xt_DELUDE" 		
+BUILT_MODULE_LOCATION[3]=""
+BUILT_MODULE_NAME[3]="xt_DHCPMAC"
 DEST_MODULE_LOCATION[3]="/extra"
 
-BUILT_MODULE_LOCATION[4]="" 		
-BUILT_MODULE_NAME[4]="xt_DHCPMAC" 		
+BUILT_MODULE_LOCATION[4]=""
+BUILT_MODULE_NAME[4]="xt_DNETMAP"
 DEST_MODULE_LOCATION[4]="/extra"
 
-BUILT_MODULE_LOCATION[5]="" 		
-BUILT_MODULE_NAME[5]="xt_DNETMAP" 		
+BUILT_MODULE_LOCATION[5]=""
+BUILT_MODULE_NAME[5]="xt_ECHO"
 DEST_MODULE_LOCATION[5]="/extra"
 
-BUILT_MODULE_LOCATION[6]="" 		
-BUILT_MODULE_NAME[6]="xt_ECHO" 		
+BUILT_MODULE_LOCATION[6]=""
+BUILT_MODULE_NAME[6]="xt_IPMARK"
 DEST_MODULE_LOCATION[6]="/extra"
 
-BUILT_MODULE_LOCATION[7]="" 		
-BUILT_MODULE_NAME[7]="xt_IPMARK" 		
+BUILT_MODULE_LOCATION[7]=""
+BUILT_MODULE_NAME[7]="xt_LOGMARK"
 DEST_MODULE_LOCATION[7]="/extra"
 
-BUILT_MODULE_LOCATION[8]="" 		
-BUILT_MODULE_NAME[8]="xt_LOGMARK" 		
+BUILT_MODULE_LOCATION[8]=""
+BUILT_MODULE_NAME[8]="xt_PROTO"
 DEST_MODULE_LOCATION[8]="/extra"
 
-BUILT_MODULE_LOCATION[9]="" 		
-BUILT_MODULE_NAME[9]="xt_PROTO" 		
+BUILT_MODULE_LOCATION[9]=""
+BUILT_MODULE_NAME[9]="xt_SYSRQ"
 DEST_MODULE_LOCATION[9]="/extra"
 
-BUILT_MODULE_LOCATION[10]="" 		
-BUILT_MODULE_NAME[10]="xt_SYSRQ" 		
+BUILT_MODULE_LOCATION[10]=""
+BUILT_MODULE_NAME[10]="xt_TARPIT"
 DEST_MODULE_LOCATION[10]="/extra"
 
-BUILT_MODULE_LOCATION[11]="" 		
-BUILT_MODULE_NAME[11]="xt_TARPIT" 		
+BUILT_MODULE_LOCATION[11]=""
+BUILT_MODULE_NAME[11]="xt_asn"
 DEST_MODULE_LOCATION[11]="/extra"
 
-BUILT_MODULE_LOCATION[12]="" 		
-BUILT_MODULE_NAME[12]="xt_condition" 		
+BUILT_MODULE_LOCATION[12]=""
+BUILT_MODULE_NAME[12]="xt_condition"
 DEST_MODULE_LOCATION[12]="/extra"
 
-BUILT_MODULE_LOCATION[13]="" 		
-BUILT_MODULE_NAME[13]="xt_fuzzy" 		
+BUILT_MODULE_LOCATION[13]=""
+BUILT_MODULE_NAME[13]="xt_fuzzy"
 DEST_MODULE_LOCATION[13]="/extra"
 
-BUILT_MODULE_LOCATION[14]="" 		
-BUILT_MODULE_NAME[14]="xt_geoip" 		
+BUILT_MODULE_LOCATION[14]=""
+BUILT_MODULE_NAME[14]="xt_geoip"
 DEST_MODULE_LOCATION[14]="/extra"
 
-BUILT_MODULE_LOCATION[15]="" 		
-BUILT_MODULE_NAME[15]="xt_iface" 		
+BUILT_MODULE_LOCATION[15]=""
+BUILT_MODULE_NAME[15]="xt_gradm"
 DEST_MODULE_LOCATION[15]="/extra"
 
-BUILT_MODULE_LOCATION[16]="" 		
-BUILT_MODULE_NAME[16]="xt_ipp2p" 		
+BUILT_MODULE_LOCATION[16]=""
+BUILT_MODULE_NAME[16]="xt_iface"
 DEST_MODULE_LOCATION[16]="/extra"
 
-BUILT_MODULE_LOCATION[17]="" 		
-BUILT_MODULE_NAME[17]="xt_ipv4options" 		
+BUILT_MODULE_LOCATION[17]=""
+BUILT_MODULE_NAME[17]="xt_ipp2p"
 DEST_MODULE_LOCATION[17]="/extra"
 
-BUILT_MODULE_LOCATION[18]="" 		
-BUILT_MODULE_NAME[18]="xt_length2" 		
+BUILT_MODULE_LOCATION[18]=""
+BUILT_MODULE_NAME[18]="xt_ipv4options"
 DEST_MODULE_LOCATION[18]="/extra"
 
-BUILT_MODULE_LOCATION[19]="" 		
-BUILT_MODULE_NAME[19]="xt_lscan" 		
+BUILT_MODULE_LOCATION[19]=""
+BUILT_MODULE_NAME[19]="xt_length2"
 DEST_MODULE_LOCATION[19]="/extra"
 
-BUILT_MODULE_LOCATION[20]="" 		
-BUILT_MODULE_NAME[20]="xt_psd" 		
+BUILT_MODULE_LOCATION[20]=""
+BUILT_MODULE_NAME[20]="xt_lscan"
 DEST_MODULE_LOCATION[20]="/extra"
 
-BUILT_MODULE_LOCATION[21]="" 		
-BUILT_MODULE_NAME[21]="xt_quota2" 		
+BUILT_MODULE_LOCATION[21]=""
+BUILT_MODULE_NAME[21]="xt_pknock"
 DEST_MODULE_LOCATION[21]="/extra"
+
+BUILT_MODULE_LOCATION[22]=""
+BUILT_MODULE_NAME[22]="xt_psd"
+DEST_MODULE_LOCATION[22]="/extra"
+
+BUILT_MODULE_LOCATION[23]=""
+BUILT_MODULE_NAME[23]="xt_quota2"
+DEST_MODULE_LOCATION[23]="/extra"
