--- a/dkms/dkms-ndpi-netfilter.conf
+++ b/dkms/dkms-ndpi-netfilter.conf
@@ -1,11 +1,11 @@
-PACKAGE_VERSION="4.15.0"
+PACKAGE_VERSION="5.1.0"
 
 # Items below here should not have to change with each driver version
 
 PACKAGE_NAME="ndpi-netfilter"
 BDIR="$dkms_tree/${PACKAGE_NAME}/${PACKAGE_VERSION}/build"
 PRE_BUILD="autogen.sh"
-MAKE="make -C ndpi-netfilter; find ${BDIR} -name '*.ko' -exec mv -v {} ${BDIR} \;"
+MAKE="./configure; make -C ndpi-netfilter; find ${BDIR} -name '*.ko' -exec mv -v {} ${BDIR} \;"
 
 AUTOINSTALL="yes"
 
